.legacy/infrastructure/infrastructure/apps/staging/20-worker.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workers
  namespace: magicbox-prod
spec:
  selector:
    matchLabels:
      app: workers
  replicas: 3
  template:
    metadata:
      labels:
        app: workers
    spec:
      containers:
      - name: worker
        image: nielsgregers/magicbox-workers:v4
