.legacy/infrastructure/infrastructure/apps/staging/90-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: ingress-apisix
  annotations:
    kubernetes.io/ingress.class: nginx
#    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: magicbox-v1.nets-intranets.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apisix-gateway
                port:
                  number: 80
